[package]
name = "aliyun_dns"
version = "0.1.1"
authors = ["edsky <dead.ash@hotmail.com>"]
edition = "2021"
description = "A Rust library for working with the Aliyun DNS API"
repository = "https://github.com/edsky/aliyun_dns"
license = "MIT"
readme = "README.md"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.26", features = ["full"] }
anyhow = "1.0"
url = "2.3"
base64 = "0.21"
rand = "0.8.5"
chrono = "0.4"
hmac = "0.12"
sha1 = "0.10"